# CDeploy

./: .gitignore  CDeploy  NOTICE  README.md
examples/example_external_package/: CMakeLists.txt
examples/example_package/: CMakeLists.txt
examples/example_package/include/: MyLib.hpp
examples/example_package/src/: MyLib.cpp
examples/example_project/: CMakeLists.txt
examples/example_project/src/: Main.cpp
examples/example_project2/: CMakeLists.txt
examples/example_project3/: CDeploy  CMakeLists.txt
